--- a/style/style.css
+++ b/style/style.css
@@ -616,6 +616,9 @@ h1, h2, h3, h4, h5, h6{
     .header_nav{
         display: none;
     }
+    .intro{
+        margin-top: 40px;
+    }
     #menu{
         top: 30%;
         right: 10px;
@@ -627,7 +630,7 @@ h1, h2, h3, h4, h5, h6{
         margin-top: -5px;
     }
     .nav_burger{
-        margin-top: -25px;
+        margin-top: -30px;
     }
     .footer_logo{
         font-size: 16px;
